# mazy-suite

./: .gitignore  LICENSE  README.md
.github/workflows/: pages.yml
cover_ed/: README.md  TODO.md  package.json  pnpm-lock.yaml
cover_ed/src/: App.css  App.tsx  main.tsx  types.ts  utils.ts
cover_ed/src-tauri/: Cargo.toml  tauri.conf.json
docs/: data-formats.md
examples/data/: albums.json  albums_cache.json  back-to-normal.json  back-to-normal.md
gig_anim/: README.md  copy-fonts.js  index.html  package.json  pnpm-lock.yaml  tmp-todo.md  tsconfig.app.tsbuildinfo
gig_anim/src/: App.css  App.tsx  themes.ts  types.ts
groove_lab/: CLAUDE.md  MIDI_EXPORT_NOTES.md  README.md  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.json
groove_lab/src/: App.tsx  download.ts  generate.test.ts  (+13 more)
live_prompter/: CLAUDE.md  Custom Playlist Feature.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
lyrics-cards/: index.html  package.json
massembler/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
mix-mastering/: .gitignore  CLAUDE.md  README.md  SPECIFICATION.md  build.sh  go.mod  go.sum
mp3-playlist-manager/: README.md  pyproject.toml
mp3-playlist-manager/mp3_playlist_manager/: cli.py  exceptions.py  manager.py
music_cache_updater/: .gitignore  CLAUDE.md  README.md  albums_cache.json  pyproject.toml
music_cache_updater/music_cache_updater/: cli.py  config.py  core.py  models.py
player/: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  update_index.js  vite.config.js
player_editor/: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  shift_timings.rb  vite.config.js
portal/: index.html
scripts/: build_site.sh
sequence-builder/: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
srt_generator/: .gitignore  README.md  pyproject.toml
srt_generator/src/srt_generator/: align.py  cli.py  separate.py  srt_writer.py  trim.py
srt_generator/tests/: test_srt_writer.py  test_trim.py
track_mixer/: CLAUDE.md  README.md  SPECIFICATION.md  index.html  package.json  pnpm-lock.yaml  vite-suite-bridge.js  vite.config.js
(+418 files in other folders)
