[tool.poetry]
name = "music-cache-updater"
version = "1.2.0"
description = "A tool to update music cache files"
authors = ["Jean Lazarou <jean.lazarou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.0"
rich = "^13.0.0"
typing-extensions = "^4.5.0"
mutagen = "^1.46.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[tool.poetry.scripts]
cache-updater = "music_cache_updater.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
