[project]
name = "srt-generator"
version = "0.2.0"
description = "Generate draft SRT lyric timings from songs, to be finished in player_editor"
requires-python = ">=3.12,<3.13"
dependencies = [
    "stable-ts>=2.17",
    "demucs>=4.0.1",
    # torch 2.6 changed torch.load defaults in a way that breaks demucs 4.0.1
    # model loading; relax once demucs ships a release compatible with it.
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
    # not direct dependencies: keep the resolver off ancient versions that
    # cannot build on Python 3.12
    "numba>=0.60",
    "numpy>=1.26",
]

[project.scripts]
srt_generator = "srt_generator.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/srt_generator"]
